--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -1,11 +1,6 @@
-.form{
-    padding: 20px;
-    border: 1px solid black;
-}
-
-.list{
-    padding: 20px;
-    border: 1px solid black;
-    height: 350px;
-    overflow: scroll;
+#big_wrapper {
+    border: 5px solid purple;
+    padding: 15px;
+    margin: 0px auto;
+    border-radius: 10px;
 }
