--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,20 +1,9 @@
-<!--The whole content below can be removed with the new code.-->
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Anonymous notes</h1>
-        </div>
-    </div>
+<div class="container" id="big_wrapper">
 
-    <div class="row">
-        <div class="col-md-12 form">
-            <app-form (aTaskEventEmitter)="addNote($event)"></app-form>
-        </div>
-    </div>
+<h1>Belt Exam Prep (Full Mean)</h1>
 
-    <div class="row">
-        <div class="col-md-12 list">
-            <app-wall (aTaskEventEmitter)="getNotes()" [notes]='notes'></app-wall>
-        </div>
-    </div>
+<!--this is where the components will show up-->
+<router-outlet></router-outlet> 
+
+    
 </div>
