--- a/public/src/app/dashboard/dashboard.component.html
+++ b/public/src/app/dashboard/dashboard.component.html
@@ -3,10 +3,27 @@
     Dashboard Component
   </h3>
 
-  <h5>Welcome {{activeUser}}</h5>
+  <!--logout button-->
+  <a (click)="logoutUser()">logout</a>
+
+  <h3>Welcome: {{activeUser}}</h3>
 
   <div *ngIf="topics">
-    Check out the topics: {{ topics | json}}
+    <!--Check out the topics: {{ topics | json}}-->
+    <table>
+      <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th>User</th>
+        <th>Comments</th>
+      </tr>
+      <tr *ngFor="let topic of topics">
+        <td>{{topic.title}}</td>
+        <td>{{topic.description}}</td>
+        <td>{{topic.user}}</td>
+        <td>{{topic.comments}}</td>
+      </tr>
+    </table>
   </div>
 
   <div *ngIf="errors">
@@ -18,27 +35,20 @@
   <div id="newTopicSpace">
       <!--simple form with validations:-->
     <form #topicForm='ngForm' (submit)="addTopic(topicForm)">
-      <label for="topic">Topic:</label>
-      <input type="text" name="name" required minlength="5" [(ngModel)]="topic.name" #name="ngModel">
+      <label for="title">Title:</label>
+      <input type="text" name="title" required minlength="5" [(ngModel)]="topic.title" #title="ngModel">
       <br>
       <label for="description">Description:</label>
       <input type="text" name="description" required [(ngModel)]="topic.description" #description="ngModel">
       <br>
-      <label for="category">Category:</label>
-      <select name="category" required [(ngModel)]="topic.category" #category="ngModel">
-        <option value="html">HTML</option>
-        <option value="python">Python</option>
-        <option value="javascript">JavaScript</option>
-        <option value="css">CSS</option>
-        <option value="typescript">TypeScript</option>
-      </select>
-      <br>
       <button type="submit" [disabled]="!topicForm.valid">Submit</button>
     </form>
 
-    <div *ngIf="!name.valid && (name.touched || topicForm.submitted)">
+    <div *ngIf="!title.valid && (title.touched || topicForm.submitted)">
         <p class="red">Topic required, min 5 char</p>
     </div>
+
+   {{ topic | json}}
 
   </div>
 
